--- a/JSSAlgorithm/Base.lproj/Main.storyboard
+++ b/JSSAlgorithm/Base.lproj/Main.storyboard
@@ -3,7 +3,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -19,31 +18,25 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g5h-u6-5NL">
-                                <state key="normal" title="DataStructure">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="9O9-Ti-YNm">
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
-                                    <action selector="enterDatastructureAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ZpI-5I-b5z"/>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="wbM-Rv-PFU"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="oCO-a3-jIm"/>
                                 </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FYu-X2-JKK">
-                                <state key="normal" title="Algorithm">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="enterAlgorithmAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Pb8-cA-4J8"/>
-                                </connections>
-                            </button>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="FYu-X2-JKK" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Hqn-Ga-vSm"/>
-                            <constraint firstItem="FYu-X2-JKK" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" multiplier="1.1" id="T05-vZ-KWI"/>
-                            <constraint firstItem="g5h-u6-5NL" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" multiplier="0.9" id="vsY-gb-HzZ"/>
-                            <constraint firstItem="g5h-u6-5NL" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ytZ-is-nQb"/>
+                            <constraint firstItem="9O9-Ti-YNm" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="8f5-Nl-Mnb"/>
+                            <constraint firstItem="9O9-Ti-YNm" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" id="EB1-sW-b89"/>
+                            <constraint firstItem="9O9-Ti-YNm" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="mOy-On-Jqe"/>
+                            <constraint firstItem="9O9-Ti-YNm" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="sRx-iL-GfN"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="frontMainTableVIew" destination="9O9-Ti-YNm" id="3vu-ZJ-I4z"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
